<resources>
    <string name="app_name">Golf Tracker</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="welcome_message">Welcome to the\nGolf Tracker</string>
    <string name="hole_quantity">How many holes?</string>
    <string name="hole_number">Hole #1</string>
    <string name="number_of_shots">0</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="next">Next</string>
</resources>